// Vitest Snapshot v1

exports[`label > empty 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {},
          "children": [],
          "data": {
            "hName": "test",
            "hProperties": {},
          },
          "fmAttributes": {},
          "name": "test",
          "position": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`label > invalid-label-eof 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": ":test[",
        },
      ],
      "position": {
        "end": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`label > invalid-label-eol 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": ":test[",
        },
      ],
      "position": {
        "end": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 2,
      "offset": 7,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`label > scaped-characters 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {},
          "children": [
            {
              "position": {
                "end": {
                  "column": 25,
                  "line": 1,
                  "offset": 24,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "text",
              "value": "scape [ character",
            },
          ],
          "data": {
            "hName": "test",
            "hProperties": {},
          },
          "fmAttributes": {},
          "name": "test",
          "position": {
            "end": {
              "column": 26,
              "line": 1,
              "offset": 25,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 26,
          "line": 1,
          "offset": 25,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 26,
      "line": 1,
      "offset": 25,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`label > simple 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {},
          "children": [
            {
              "position": {
                "end": {
                  "column": 12,
                  "line": 1,
                  "offset": 11,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "text",
              "value": "label",
            },
          ],
          "data": {
            "hName": "test",
            "hProperties": {},
          },
          "fmAttributes": {},
          "name": "test",
          "position": {
            "end": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
